--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
     "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build -- prefix frontend"
   },
+  "engines": {
+      "node": "18.x"
+    },
   "author": "",
   "license": "ISC",
   "dependencies": {
