--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-
+PORT = 5000
+MONGO_URI = YOUR_MONGO_URI
+JWT_SECRET = YOUR_JWT_SECRET
+NODE_ENV = developement (FOR DEVELOPEMENT) or production (FOR PRODUCTION)
